重构三位一体样板核心并修复迁移死锁 (#336)